--- a/Graffo.Core/Graffo.Core.csproj
+++ b/Graffo.Core/Graffo.Core.csproj
@@ -56,10 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BO\ChartFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="BO\" />
     <Folder Include="DTO\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
