--- a/Graffo.Entidades/Graffo.Entidades.csproj
+++ b/Graffo.Entidades/Graffo.Entidades.csproj
@@ -40,7 +40,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChartType.cs" />
+    <Compile Include="Data.cs" />
+    <Compile Include="Entidade.cs" />
+    <Compile Include="Interfaces\IEntidade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrelloDataType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
