--- a/Graffo.Core/packages.config
+++ b/Graffo.Core/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
-  <package id="Manatee.Json" version="2.5.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Manatee.Json" version="2.6.1" targetFramework="net45" />
   <package id="Manatee.StateMachine" version="1.1" targetFramework="net45" />
-  <package id="Manatee.Trello" version="0.6.9" targetFramework="net45" />
-  <package id="Manatee.Trello.ManateeJson" version="1.1.0" targetFramework="net45" />
+  <package id="Manatee.Trello" version="1.0.1.2" targetFramework="net45" />
+  <package id="Manatee.Trello.ManateeJson" version="1.2.0.2" targetFramework="net45" />
+  <package id="Manatee.Trello.NewtonsoftJson" version="1.1.0" targetFramework="net45" />
+  <package id="Manatee.Trello.RestSharp" version="1.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
 </packages>
